addressed issues with the styling for the ScrollingReviews component for better visuals and performance on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -369,10 +369,23 @@ animation: orange-glow  5s ease-in-out infinite alternate;
 .scrolling-review {
   overflow: hidden;
   display: flex;
-  width: 2500px !important;
+  /* width: 2500px !important; */
+  width: 200vw !important;
   position: relative;
   height: 15em; 
   overflow: hidden;
+}
+
+@media (max-width: 768px) {
+  .scrolling-review {
+    width: 300vw !important;
+  }
+}
+
+@media (max-width: 640px) {
+  .scrolling-review {
+    width: 400vw !important;
+  }
 }
 
 .scrolling-review-content{
@@ -400,11 +413,24 @@ animation: orange-glow  5s ease-in-out infinite alternate;
 .scrolling-review-content-bar-2 {
   display: flex;
   position: absolute;
-  left: 2499px;
+  /* left: 2499px; */
+  left: 199vw;
   justify-content: space-around;
   width: 100% !important; /* Twice the width of the parent */
   color: #fff;
   background: var(--brand-gradient-background-reverse-color);
+}
+
+@media (max-width: 768px) {
+  .scrolling-review-content-bar-2 {
+    left: 299vw !important;
+  }
+}
+
+@media (max-width: 640px) {
+  .scrolling-review-content-bar-2{
+    left: 399vw !important;
+  }
 }
 
 /* ================ Reviews ================ */
